--- a/css/tredcode_console.css
+++ b/css/tredcode_console.css
@@ -55,7 +55,7 @@
   }
 }
 
-@media (max-width:992px) {
+@media (max-width: 992px) {
   .calender_heatmap {
     padding-right: 0 !important;
   }
@@ -109,6 +109,7 @@ input[type="date"] {
   background-color: #525252 !important;
   color: #ffbd5a !important;
   margin-top: 8px !important;
+  border-radius: 20px;
 }
 
 .modal-body td:first-child {
@@ -135,14 +136,14 @@ input[type="date"] {
 
 @media (max-width: 340px) {
   .modal-body td:first-child {
-    width: 110px !important; 
+    width: 110px !important;
   }
 
   .modal-body td {
     font-size: 12px !important;
   }
 
-  input[type='radio']:after {
+  input[type="radio"]:after {
     width: 15px !important;
     height: 15px !important;
     border-radius: 15px;
@@ -150,13 +151,13 @@ input[type="date"] {
     left: -1px !important;
     position: relative;
     background-color: #2e2e2e;
-    content: '';
+    content: "";
     display: inline-block;
     visibility: visible;
     border: 2px solid #ffbd5a;
   }
-  
-  input[type='radio']:checked:after {
+
+  input[type="radio"]:checked:after {
     width: 15px !important;
     height: 15px !important;
     border-radius: 15px;
@@ -164,14 +165,14 @@ input[type="date"] {
     left: -1px !important;
     position: relative;
     background-color: #ffbd5a;
-    content: '';
+    content: "";
     display: inline-block;
     visibility: visible;
     border: 2px solid #ffbd5a;
   }
 }
 
-input[type='radio']:after {
+input[type="radio"]:after {
   width: 17px;
   height: 17px;
   border-radius: 15px;
@@ -179,13 +180,13 @@ input[type='radio']:after {
   left: -0.1px;
   position: relative;
   background-color: #2e2e2e;
-  content: '';
+  content: "";
   display: inline-block;
   visibility: visible;
   border: 2px solid #ffbd5a;
 }
 
-input[type='radio']:checked:after {
+input[type="radio"]:checked:after {
   width: 17px;
   height: 17px;
   border-radius: 15px;
@@ -193,8 +194,34 @@ input[type='radio']:checked:after {
   left: -0.1px;
   position: relative;
   background-color: #ffbd5a;
-  content: '';
+  content: "";
   display: inline-block;
   visibility: visible;
   border: 2px solid #ffbd5a;
+}
+
+/*----------Suggestion----------*/
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #525252;
+  border: 0px solid #525252;
+  border-top: none;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1;
+}
+.dropdown-option {
+  padding: 5px;
+  cursor: pointer;
+}
+.placeholder-color::placeholder {
+  color: #ffbd5a; /* Change to your desired color */
+  opacity: 0.5;
 }
