--- a/css/calendar-gc.css
+++ b/css/calendar-gc.css
@@ -71,7 +71,8 @@
   text-transform: uppercase;
   color: #e8c15e;
   position: relative;
-  padding-bottom: 12px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
 .gc-calendar table.calendar td {
