--- a/css/tredcode_console.css
+++ b/css/tredcode_console.css
@@ -171,6 +171,7 @@ textarea {
   input[type="text"],
   input[type="number"],
   input[type="datetime-local"],
+  input[type="date"],
   textarea {
     width: 155px;
   }
