--- a/css/calendar-gc.css
+++ b/css/calendar-gc.css
@@ -123,7 +123,7 @@
   width: 90%;
   height: 2px;
   border-radius: 1px;
-  background-color: #8f8f93;
+  /* background-color: #8f8f93; */
   bottom: 0px;
   left: 0;
   position: absolute;
@@ -140,6 +140,10 @@
   display: block;
   width: max-content;
   margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 
