--- a/css/tredcode_console.css
+++ b/css/tredcode_console.css
@@ -81,6 +81,12 @@ Calender HeatMap Plugin
   color: #fff !important; /* Change to your desired color */
 }
 
+/* @media (max-width: 450px) {
+  .ch-week-labels {
+    display: none !important;
+  }
+} */
+
 /*
 .ch-week, .ch-day-labels --> Width
 .ch-day --> width and height
@@ -103,6 +109,11 @@ input::-webkit-inner-spin-button {
   height: auto !important;
 }
 
+#calendar table {
+  border-collapse: separate; /* Separate borders for cells */
+  border-spacing: 2px;
+}
+
 .switch input {
   display: none;
 }
@@ -116,6 +127,7 @@ input::-webkit-inner-spin-button {
   margin-bottom: 10px;
   transform: translateY(50%);
   position: relative;
+  top: -5px;
 }
 
 .slider {
@@ -125,7 +137,7 @@ input::-webkit-inner-spin-button {
   left: 0;
   right: 0;
   border-radius: 30px;
-  box-shadow: 0 0 0 2px #e2e2e2, 0 0 4px #e2e2e2;
+  box-shadow: 0 0 0 2px #6bd368, 0 0 4px #6bd368;
   cursor: pointer;
   border: 4px solid transparent;
   overflow: hidden;
@@ -137,18 +149,20 @@ input::-webkit-inner-spin-button {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: #e2e2e2;
+  background-color: #6bd368;
   border-radius: 30px;
-  transform: translateX(-35px); 
+  transform: translateX(-35px);
   transition: 0.2s;
 }
 
 input:checked + .slider:before {
-  transform: translateX(35px); 
-  background-color: #e2e2e2;
+  transform: translateX(35px);
+  background-color: #fc5c5d;
 }
 
-
+input:checked + .slider {
+  box-shadow: 0 0 0 2px #fc5c5d, 0 0 4px #fc5c5d;
+}
 
 input[type="text"],
 input[type="number"],
@@ -159,12 +173,22 @@ textarea {
   color: #e2e2e2 !important;
   margin-top: 8px !important;
   border-radius: 5px;
-  width: 190px;
+  width: 250px;
   border: 0px solid linear-gradient(to bottom, #252525, #3a3a3a);
 }
 
 .modal-body td:first-child {
   font-weight: 500;
+}
+
+@media (max-width: 992px) {
+  input[type="text"],
+  input[type="number"],
+  input[type="datetime-local"],
+  input[type="date"],
+  textarea {
+    width: 180px;
+  }
 }
 
 @media (max-width: 440px) {
@@ -253,6 +277,20 @@ input[type="radio"]:checked:after {
   border: 2px solid #e2e2e2;
 }
 
+.btn-close {
+  font-size: 12px;
+}
+
+.bg-white {
+  border-radius: 50px;
+}
+#exampleModal1 .modal-header{background-color:#6bd368}
+#exampleModal1 .modal-footer{background-color:#6bd368}
+
+.modal-lg {
+  width:600px !important
+}
+
 /*----------Suggestion----------*/
 .dropdown {
   position: relative;
@@ -277,4 +315,27 @@ input[type="radio"]:checked:after {
 .placeholder-color::placeholder {
   color: #e2e2e2; /* Change to your desired color */
   opacity: 0.5;
+  font-size: 12px;
+}
+
+/*---------------monthly view--------*/
+.day-number {
+  text-align: center;
+}
+@media (min-width: 992px) and (max-width: 1400px) {
+  .day-number {
+    font-size: 12px;
+  }
+  .gc-event.badge {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 450px) {
+  .day-number {
+    font-size: 12px;
+  }
+  .gc-event.badge {
+    font-size: 10px;
+  }
 }
