--- a/css/tredcode_console.css
+++ b/css/tredcode_console.css
@@ -3,6 +3,9 @@
 .bg-color {
   background: #1c1c1c;
 }
+.bg-color1 {
+  background: #262626;
+}
 .text-light {
   color: #f8f9fa !important;
 }
@@ -105,7 +108,9 @@ input::-webkit-inner-spin-button {
 }
 
 .modal-body tbody,
-#calendar tbody {
+#calendar tbody,
+#All_stats_table tbody,
+.bg-color1 tbody {
   height: auto !important;
 }
 
@@ -114,11 +119,13 @@ input::-webkit-inner-spin-button {
   border-spacing: 2px;
 }
 
-.switch input {
+.switch input,
+.switch1 input {
   display: none;
 }
 
-.switch {
+.switch,
+.switch1 {
   display: inline-block;
   width: 60px; /*=w*/
   height: 20px; /*=h*/
@@ -144,12 +151,37 @@ input::-webkit-inner-spin-button {
   transition: 0.2s;
 }
 
+.slider1 {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 30px;
+  box-shadow: 0 0 0 2px #fff, 0 0 4px #fff;
+  cursor: pointer;
+  border: 4px solid transparent;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
 .slider:before {
   position: absolute;
   content: "";
   width: 100%;
   height: 100%;
   background-color: #6bd368;
+  border-radius: 30px;
+  transform: translateX(-35px);
+  transition: 0.2s;
+}
+
+.slider1:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
   border-radius: 30px;
   transform: translateX(-35px);
   transition: 0.2s;
@@ -164,6 +196,15 @@ input:checked + .slider {
   box-shadow: 0 0 0 2px #fc5c5d, 0 0 4px #fc5c5d;
 }
 
+input:checked + .slider1:before {
+  transform: translateX(35px);
+  background-color: #fff;
+}
+
+input:checked + .slider1 {
+  box-shadow: 0 0 0 2px #fff, 0 0 4px #fff;
+}
+
 input[type="text"],
 input[type="number"],
 input[type="datetime-local"],
@@ -175,6 +216,10 @@ textarea {
   border-radius: 5px;
   width: 250px;
   border: 0px solid linear-gradient(to bottom, #252525, #3a3a3a);
+}
+
+input[type="date"]:disabled {
+  color: #9f9f9f !important;
 }
 
 .modal-body td:first-child {
@@ -279,16 +324,21 @@ input[type="radio"]:checked:after {
 
 .btn-close {
   font-size: 12px;
+  color: white !important;
 }
 
 .bg-white {
   border-radius: 50px;
 }
-#exampleModal1 .modal-header{background-color:#6bd368}
-#exampleModal1 .modal-footer{background-color:#6bd368}
+#exampleModal1 .modal-header {
+  background-color: #6bd368;
+}
+#exampleModal1 .modal-footer {
+  background-color: #6bd368;
+}
 
 .modal-lg {
-  width:600px !important
+  width: 600px !important;
 }
 
 /*----------Suggestion----------*/
@@ -337,5 +387,93 @@ input[type="radio"]:checked:after {
   }
   .gc-event.badge {
     font-size: 10px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1400px) {
+  #All_stats .col-6 {
+    font-size: 22px !important;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .answer_td {
+    font-size: 24px !important;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .answer_td {
+    font-size: 20px !important;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .answer_td {
+    font-size: 24px !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .answer_td {
+    font-size: 20px !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .answer_td {
+    font-size: 12px !important;
+  }
+
+  .selected_range table tbody tr td:nth-child(1) {
+    font-size: 12px !important;
+    font-weight: 400 !important;
+  }
+}
+
+@media (max-width: 992px) {
+  #All_stats {
+    margin-left: 0 !important;
+    margin-top: 0.5rem !important;
+  }
+}
+
+table#dataTable tr:hover {
+  background-color: #3d3d3d !important;
+}
+
+table#dataTable {
+  font-size: 14px !important;
+  font-weight: 500 !important;
+}
+
+table#dataTable tr td:nth-child(2),
+table#dataTable tr td:nth-child(3),
+table#dataTable tr td:nth-child(4) {
+  width: 130px !important;
+  padding-left: 10px !important;
+}
+
+table#dataTable tr td:nth-child(1),
+table#dataTable tr td:nth-child(8),
+table#dataTable tr td:nth-child(10) {
+  width: 75px !important;
+}
+
+@media (max-width: 1300px) {
+  table#dataTable tr td:nth-child(2),
+  table#dataTable tr td:nth-child(3),
+  table#dataTable tr td:nth-child(4) {
+    width: 120px !important;
+  }
+
+  table#dataTable {
+    font-size: 12px !important;
+  }
+}
+
+@media (max-width: 992px) {
+  table#dataTable tr {
+    width: 1000px !important;
   }
 }
